--- a/clasificacion.html
+++ b/clasificacion.html
@@ -62,7 +62,7 @@
   <main class="contenedor">
     <h1>Clasificación</h1>
     <div id="loading">
-        <img src="/img/equipos/calo.jpeg" id="spinner-img" alt="Cargando...">
+        <img src="img/equipos/calo.jpeg" id="spinner-img" alt="Cargando...">
         <p>Cargando clasificación...</p>
     </div>
     <table id="clasificacion" border="2px"></table>
