--- a/equipos.html
+++ b/equipos.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/main.js" defer></script>
   </head>
+  <script src="js/getResultadosEquipo.js"></script>
   <body>
     <header>
       <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
@@ -25,6 +26,7 @@
         </ul>
       </nav>
     </header>
+    
     <main>
       <section class="grupo">
         <h1>GRUPO 1:</h1>
@@ -40,6 +42,7 @@
                     Histórico do fútbol galego con 12 temporadas en 2ª División e
                     máis de 20 no terceiro escalón do fútbol español.
                   </p>
+                  <button onclick="verResultados('C.D. Lugo')">Ver resultados</button>
                   <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
                 </div>
               </div>
@@ -52,6 +55,7 @@
               <div class="card-back">
                 <h3>S.R. Calo</h3>
                 <p>Equipo anfitrión do torneo, gañador de tres Copas do Sar e actualmente asentado na 1ª Galicia. Leva sendo o referente no fútbol en Teo dende o 1961 baixo o lema "Máis que fútbol".</p>
+                <button onclick="verResultados('S.R. Calo')">Ver resultados</button>
                 <a href="" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -64,6 +68,7 @@
               <div class="card-back">
                 <h3>F.C. Famalicão</h3>
                 <p>Club portugués con máis de 90 anos de historia, recoñecido polo seu ascenso meteórico á Primeira Liga nos últimos anos.</p>
+                <button onclick="verResultados('F.C. Famalicão')">Ver resultados</button>
                 <a href="https://www.fcfamalicao.pt/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -76,6 +81,7 @@
               <div class="card-back">
                 <h3>Ural-Español C.F</h3>
                 <p>Histórico da cidade da Coruña, cun traballo exemplar na canteira e décadas de compromiso co fútbol base galego.</p>
+                <button onclick="verResultados('Ural C.F.')">Ver resultados</button>
                 <a href="http://www.uralcf.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -88,6 +94,7 @@
               <div class="card-back">
                 <h3>U.D. Santa Mariña</h3>
                 <p>Referente do fútbol formativo en Vigo, cuna de moitos talentos que chegaron ao fútbol profesional.</p>
+                <button onclick="verResultados('Santa Mariña')">Ver resultados</button>
                 <a href="https://www.udsantamarina.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -100,6 +107,7 @@
               <div class="card-back">
                 <h3>Pabellón Ourense C.F.</h3>
                 <p>Emblema do fútbol base ourensán, con numerosas participacións en División de Honra xuvenil e recoñecido polo seu traballo en formación.</p>
+                <button onclick="verResultados('Pabellón Ourense')">Ver resultados</button>
                 <a href="https://www.pabelloncf.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -118,6 +126,7 @@
               <div class="card-back">
                 <h3>Racing Club de Ferrol</h3>
                 <p>Histórico do fútbol galego, con 35 tempadas en 2ª División e aspiracións constantes de volver ao fútbol profesional.</p>
+                <button onclick="verResultados('Racing Ferrol')">Ver resultados</button>
                 <a href="https://www.racingclubferrol.net/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -130,6 +139,7 @@
               <div class="card-back">
                 <h3>E.D. Val Miñor Nigrán</h3>
                 <p>Escola de referencia en Nigrán, con ampla experiencia en competicións nacionais e un forte compromiso coa formación deportiva e persoal.</p>
+                <button onclick="verResultados('Val Miñor')">Ver resultados</button>
                 <a href="https://www.edvmnigran.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -142,6 +152,7 @@
               <div class="card-back">
                 <h3>Sporting Portugal Academy</h3>
                 <p>Delegación oficial do histórico Sporting CP, comprometida coa formación de talentos baixo a filosofía dun dos clubs máis laureados de Portugal.</p>
+                <button onclick="verResultados('Sp. Portugal')">Ver resultados</button>
                 <a href="https://www.sporting.pt/en/tags/academy" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -154,6 +165,7 @@
               <div class="card-back">
                 <h3>Victoria C.F</h3>
                 <p>Un dos clubs máis antigos da Coruña, con gran tradición no fútbol afeccionado e base da cidade herculina.</p>
+                <button onclick="verResultados('Victoria C.F.')">Ver resultados</button>
                 <a href="http://victoriacf.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -166,6 +178,7 @@
               <div class="card-back">
                 <h3>G.D Chaves</h3>
                 <p>Equipo histórico de Trás-os-Montes en Portugal, con varias tempadas en Primeira e unha afección apaixonada.</p>
+                <button onclick="verResultados('G.D. Chaves')">Ver resultados</button>
                 <a href="https://gdchaves.pt/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -178,6 +191,7 @@
               <div class="card-back">
                 <h3>Club Atlético Arteixo</h3>
                 <p>Club da provincia da Coruña cunha traxectoria notable no fútbol galego e momentos destacados na antiga 2ªB.</p>
+                <button onclick="verResultados('Atl. Arteixo')">Ver resultados</button>
                 <a href="https://atleticoarteixo.es/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
@@ -186,6 +200,7 @@
       </section>
       <button id="btn-top" title="Volver arriba">↑</button>
     </main>
+    <section id="resultados-equipo"></section>
     <footer>
       <div class="redes">
         <a href="https://www.instagram.com/futbolcalosr/"><img src="img/instagram.png" alt="Instagram"></a>
