--- a/resultados-equipos.html
+++ b/resultados-equipos.html
@@ -56,7 +56,7 @@
       <img src="img/equipos/calo.jpeg" id="spinner-img" alt="Cargando...">
       <p>Cargando resultados...</p>
     </div>
-    <div id="resultados-equipo"></div>
+    <div id="contenedor-tarjetas"></div>
     <button id="btn-top" title="Volver arriba">↑</button>
   </main>
   <footer>
