Cambio que no funciona :(

--- a/equipos.html
+++ b/equipos.html
@@ -126,7 +126,7 @@
               <div class="card-back">
                 <h3>Racing Club de Ferrol</h3>
                 <p>Histórico do fútbol galego, con 35 tempadas en 2ª División e aspiracións constantes de volver ao fútbol profesional.</p>
-                <button onclick="verResultados('Racing Ferrol')">Ver resultados</button>
+                <a href="resultados-equipos.html" onclick="verResultados('Racing Ferrol')">Ver resultados</a>
                 <a href="https://www.racingclubferrol.net/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
