--- a/equipos.html
+++ b/equipos.html
@@ -29,7 +29,7 @@
     
     <main>
       <section class="grupo">
-        <h1>GRUPO 1:</h1>
+        <h1>GRUPO 1</h1>
         <div class="equipos-grid">
             <div class="card">
               <div class="card-inner">
@@ -122,7 +122,7 @@
       </section>
     
       <section class="grupo">
-        <h1>GRUPO 2:</h1>
+        <h1>GRUPO 2</h1>
         <div class="equipos-grid">
           <div class="card">
             <div class="card-inner">
@@ -197,7 +197,7 @@
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/arteixo.jpg" alt="Club Atlético Arteixo" />
+                <img src="img/equipos/arteixo.png" alt="Club Atlético Arteixo" />
               </div>
               <div class="card-back">
                 <h3>Club Atlético Arteixo</h3>
