--- a/clasificacion.html
+++ b/clasificacion.html
@@ -119,10 +119,9 @@
       </header>
 
   <main class="contenedor">
-    <h1>Clasificación</h1>
     <div id="loading">
         <img src="img/equipos/calo.jpeg" id="spinner-img" alt="Cargando...">
-        <p>Cargando clasificación...</p>
+        <p style="color:white">Cargando clasificación...</p>
     </div>
     <table id="clasificacion" ></table>
   </main>
