--- a/resultados.html
+++ b/resultados.html
@@ -54,7 +54,7 @@
       
     <div id="loading">
       <img src="img/equipos/calo.jpeg" id="spinner-img" alt="Cargando...">
-      <p>Cargando resultados...</p>
+      <p style="color:white">Cargando resultados...</p>
     </div>
     <div id="contenedor-tarjetas"></div>
     <button id="btn-top" title="Volver arriba">↑</button>
