Pequeños cambios importantes

--- a/cruces.html
+++ b/cruces.html
@@ -9,12 +9,15 @@
   <script src="js/getEliminatorias.js" defer></script>
 </head>
 <style>
+  #selector{
+    display: none;
+  }
   #loading {
   text-align: center;
   padding: 30px;
   font-size: 1.5em;
   color : #333;
-}
+  }
   #spinner-img {
     margin: 10px auto;
     border: 5px solid ;
@@ -43,9 +46,9 @@
           <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="equipos.html">Equipos</a></li>
-            <li><a href="cruces.html">Cruces</a></li>
-            <li><a href="resultados.html">Resultados</a></li>
             <li><a href="clasificacion.html">Clasificación</a></li>
+            <li><a href="resultados.html">Resultados</a></li>
+            <li><a href="cruces.html">Fase Eliminatoria</a></li>
           </ul>
         </nav>
       </header>
@@ -55,7 +58,7 @@
       <img src="img/equipos/calo.jpeg" id="spinner-img" alt="Cargando...">
       <p style="color:white">Cargando resultados...</p>
     </div>
-    <section class="selector-fase">
+    <section class="selector-fase" id="selector">
       <label for="fase">Selecciona la fase:</label>
       <select id="fase" onchange="cambiarFase()">
         <option value="oro">Fase de Oro</option>
