--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       </button>
       <nav class="nav-menu">
         <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="equipos.html">Equipos</a></li>
-          <li><a href="cruces.html">Cruces</a></li>
-          <li><a href="resultados.html">Resultados</a></li>
-          <li><a href="clasificacion.html">Clasificación</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="equipos.html">Equipos</a></li>
+            <li><a href="clasificacion.html">Clasificación</a></li>
+            <li><a href="resultados.html">Resultados</a></li>
+            <li><a href="cruces.html">Fase Eliminatoria</a></li>
         </ul>
       </nav>
     </header>
