--- a/resultados.html
+++ b/resultados.html
@@ -43,9 +43,9 @@
           <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="equipos.html">Equipos</a></li>
-            <li><a href="cruces.html">Cruces</a></li>
-            <li><a href="resultados.html">Resultados</a></li>
             <li><a href="clasificacion.html">Clasificación</a></li>
+            <li><a href="resultados.html">Resultados</a></li>
+            <li><a href="cruces.html">Fase Eliminatoria</a></li>
           </ul>
         </nav>
       </header>
