--- a/resultados-equipos.html
+++ b/resultados-equipos.html
@@ -51,7 +51,7 @@
       </header>
 
   <main class="contenedor">  
-      
+    <h1>Resultados en el torneo</h1>
     <div id="loading">
       <img src="img/equipos/calo.jpeg" id="spinner-img" alt="Cargando...">
       <p style="color:white">Cargando resultados...</p>
