--- a/cruces.html
+++ b/cruces.html
@@ -54,6 +54,7 @@
       </header>
 
   <main class="contenedor">
+    <h1>Resultados en las rondas eliminatorias</h1>
     <div id="loading">
       <img src="img/equipos/calo.jpeg" id="spinner-img" alt="Cargando...">
       <p style="color:white">Cargando resultados...</p>
@@ -64,9 +65,9 @@
         <option value="oro">Fase de Oro</option>
         <option value="plata">Fase de Plata</option>
       </select>
+      <nav id="menu-rondas" class="menu-rondas"></nav>
     </section>
     
-    <nav id="menu-rondas" class="menu-rondas"></nav>
     <div id="contenedor-tarjetas"></div>
   </main>
   <!-- <button id="btn-top" title="Volver arriba">↑</button>
