--- a/resultados.html
+++ b/resultados.html
@@ -51,7 +51,8 @@
       </header>
 
   <main class="contenedor">  
-      
+
+    <h1>Resultados en la fase de grupos</h1>
     <div id="loading">
       <img src="img/equipos/calo.jpeg" id="spinner-img" alt="Cargando...">
       <p style="color:white">Cargando resultados...</p>
