Villestro añadido a la web y todas sus funcionalidades, arreglo de tamaño de las cards equipos en ordenador.

--- a/equipos.html
+++ b/equipos.html
@@ -127,14 +127,14 @@
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/ferrol.png" alt="Rácing Club de Ferrol" />
+                <img src="img/equipos/villestro.png" alt="S D Villestro" />
               </div>
               <div class="card-back">
-                <h3>Racing Club de Ferrol</h3>
-                <p>Histórico do fútbol galego, con 35 tempadas en 2ª División e aspiracións constantes de volver ao fútbol profesional.</p>
-                <a href="resultados-equipos.html?equipo=Racing Ferrol">Ver resultados</a>
+                <h3>S.D. Villestro</h3>
+                <p>Gañador da fase previa da pasada edición e un mítico do fuútbol en Santiago de Compostela, o seu primeiro equipo milita actualmente na 2ª Futgal Santiago. </p>
+                <a href="resultados-equipos.html?equipo=S.D. Villestro">Ver resultados</a>
                 <br/>
-                <a href="https://www.racingclubferrol.net/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="https://www.sdvillestro.com/" target="_blank" rel="noopener noreferrer">Más información</a>
               </div>
             </div>
           </div>
