--- a/index.html
+++ b/index.html
@@ -159,12 +159,12 @@
               <tr>
                 <td>1</td>
                 <td>13:30 - 14:10</td>
-                <td>S.R. Calo e "Completar"</td>
+                <td>S.R. Calo e S.D. Villestro</td>
               </tr>
               <tr>
                 <td>2</td>
                 <td>13:45 - 14:30</td>
-                <td>S.R. Calo, "Completar", C.D. Lugo e S.P. Academy</td>
+                <td>S.R. Calo, S.D. Villestro, C.D. Lugo e S.P. Academy</td>
               </tr>
               <tr>
                 <td>3</td>
