--- a/clasificacion.html
+++ b/clasificacion.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Cruces</title>
+  <link rel="icon" href="img/logo.png" type="image/png">
   <link rel="stylesheet" href="css/styles.css" />
   <script src="js/main.js" defer></script>
   <script src="js/getClasificacion.js" defer></script>
