Cambio de fuente y arreglo de boton semifinais

--- a/clasificacion.html
+++ b/clasificacion.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cruces</title>
+  <title>Clasificación</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="icon" href="img/logo.png" type="image/png">
   <link rel="stylesheet" href="css/styles.css" />
   <script src="js/main.js" defer></script>
@@ -40,6 +41,7 @@
   padding: 10px 18px;
   border-radius: 10px;
   font-size: 15px;
+  font-family: "Montserrat", sans-serif;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.2s ease;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -80,7 +82,7 @@
   border-collapse: collapse;
   background-color: transparent;
   color: #fff;
-  font-family: 'Arial', sans-serif;
+  font-family: "Montserrat", sans-serif;
   min-width: 300px; /* Ajusta según el contenido para evitar que la tabla se corte */
 }
 
