--- a/cruces.html
+++ b/cruces.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Cruces</title>
+  <title>Fase Final</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <link rel="icon" href="img/logo.png" type="image/png">
   <link rel="stylesheet" href="css/styles.css" />
   <script src="js/main.js" defer></script>
@@ -35,18 +36,6 @@
     100% { transform: rotate(360deg); }
   }
 </style>
-<!-- <script>
-  const select = document.getElementById('fase')
-  const contenedor = document.querySelector('.selector-fase')
-
-  select.addEventListener('focus', () => {
-    contenedor.classList.add('abierto')
-  })
-
-  select.addEventListener('blur', () => {
-    contenedor.classList.remove('abierto')
-  })
-</script> -->
 <body>
     <header>
       <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
