--- a/equipos.html
+++ b/equipos.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Equipos</title>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="icon" href="img/logo.png" type="image/png">
     <link rel="stylesheet" href="css/styles.css" />
     <script src="js/main.js" defer></script>
