Cambios en imagenes y nombres de la const de los equipos en los JS

--- a/equipos.html
+++ b/equipos.html
@@ -80,7 +80,7 @@
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/ural.jpg" alt="Ural-Español" />
+                <img src="img/equipos/ural.png" alt="Ural-Español" />
               </div>
               <div class="card-back">
                 <h3>Ural-Español C.F</h3>
