--- a/resultados.html
+++ b/resultados.html
@@ -38,7 +38,7 @@
     justify-content: space-between;
     align-items: center;
     background-color: #f9f9f9;
-    flex-wrap: wrap;
+    gap: 4rem;
   }
 
   .equipo-lado {
@@ -62,10 +62,11 @@
   }
 
   .marcador-central {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 40%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 40%;
+      gap: 0;
   }
 
   .hora-campo {
