Cambios en todas las cards de resultados

--- a/resultados.html
+++ b/resultados.html
@@ -68,6 +68,14 @@
       width: 40%;
       gap: 0;
   }
+  .resultado {
+    margin-top: 50px;
+    margin-bottom: 30px;
+  }
+
+  .info {
+    margin: 3px;
+  }
 
 </style>
 <body>
