--- a/cruces.html
+++ b/cruces.html
@@ -35,6 +35,50 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
+    .resultado-partido {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #f9f9f9;
+    gap :2rem;
+  }
+
+  .equipo-lado {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 30%;
+  }
+
+  .equipo-lado img {
+    width: 100px;
+    height: 100px;
+    object-fit: contain; /* O 'cover' si prefieres que se recorte un poco */
+    margin-bottom: 10px;
+  }
+
+  .equipo-lado p {
+    font-size: 14px;
+    text-align: center;
+    line-height: 1.2;
+  }
+
+  .marcador-central {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 40%;
+      gap: 0;
+  }
+  .resultado {
+    margin-top: 50px;
+    margin-bottom: 30px;
+  }
+
+  .info {
+    margin: 3px;
+  }
 </style>
 <body>
     <header>
