--- a/index.html
+++ b/index.html
@@ -344,16 +344,18 @@
           >
         </div>
       </section>
-      <!-- <section id="enquisa" class="cardInfo">
+      <section id="enquisa" class="cardInfo">
         <h2>
           Axúdanos a mellorar!
           <span class="arrow">▼</span>
         </h2>
-        <p>Deixa a túa opinión sobre o torneo.</p>
-        <a class="btn" href="https://forms.gle/tu-enquisa" target="_blank"
+        <div class="card-content">
+                  <p>Deixa a túa opinión sobre o torneo.</p>
+        <a class="btn" href="#" target="_blank"
           >Ir á enquisa</a
         >
-      </section> -->
+        </div>
+      </section>
       <button id="btn-top" title="Volver arriba">↑</button>
     </main>
 
