--- a/cruces.html
+++ b/cruces.html
@@ -147,14 +147,45 @@
 
     <div id="contenedor-tarjetas"></div>
   </main>
-  <footer>
-    <div class="redes">
-      <a href="https://www.instagram.com/futbolcalosr/"><img src="img/instagram.png" alt="Instagram"></a>
-      <a href="https://www.instagram.com/torneosrcalo/"><img src="img/logo.png" alt="torneosrcalo"></a>
-      <a href="https://www.facebook.com/p/F%C3%BAtbol-Calo-SR-100057430399598/?locale=es_ES"><img src="img/facebook.png" alt="Facebook"></a>
-      <a href="https://whatsapp.com/channel/0029VarRrbVLI8YSNcQ9te24"><img src="img/whatsapp.png" alt="WhatsApp"></a>
+<footer>
+  <div class="footer-container">
+    <div class="autor">
+      <p>Deseñado e desenvolto por Antón López Leal e Sergio Vilariño Seijo</p>
+
+      <p>
+        <img src="img/icono-correo.png" alt="Correo" class="icono-contacto">
+        <a href="mailto:antonlopezleal2@gmail.com">antonlopezleal2@gmail.com</a>
+        |
+        <img src="img/icono-telefono.png" alt="Teléfono" class="icono-contacto">
+        <a href="tel:+34658458813">+34 658 458 813</a>
+      </p>
+
+      <p>
+        <img src="img/icono-correo.png" alt="Correo" class="icono-contacto">
+        <a href="mailto:vilari.ser@gmail.com">vilari.ser@gmail.com</a>
+        |
+        <img src="img/icono-telefono.png" alt="Teléfono" class="icono-contacto">
+        <a href="tel:+34654075563">+34 654 075 563</a>
+      </p>
     </div>
-  </footer>
+
+    <div class="redes">
+      <a href="https://www.instagram.com/futbolcalosr/">
+        <img src="img/instagram.png" alt="Instagram">
+      </a>
+      <a href="https://www.instagram.com/torneosrcalo/">
+        <img src="img/logo.png" alt="torneosrcalo">
+      </a>
+      <a href="https://www.facebook.com/p/F%C3%BAtbol-Calo-SR-100057430399598/?locale=es_ES">
+        <img src="img/facebook.png" alt="Facebook">
+      </a>
+      <a href="https://whatsapp.com/channel/0029VarRrbVLI8YSNcQ9te24">
+        <img src="img/whatsapp.png" alt="WhatsApp">
+      </a>
+    </div>
+  </div>
+</footer>
+
 
 </body>
 </html>
