--- a/index.html
+++ b/index.html
@@ -14,23 +14,24 @@
   </head>
 
   <body>
-    <header>
-      <a href="index.html"><img src="img/logo.png" alt="Logo" /></a>
-      <button class="menu-toggle" aria-label="Abrir menú">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </button>
-      <nav class="nav-menu">
-        <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="equipos.html">Equipos</a></li>
-          <li><a href="clasificacion.html">Clasificación</a></li>
-          <li><a href="resultados.html">Resultados</a></li>
-          <li><a href="cruces.html">Fase Eliminatoria</a></li>
-        </ul>
-      </nav>
-    </header>
+<header>
+  <a href="index.html"><img src="img/logo.png" alt="Logo"></a>
+
+  <button class="menu-toggle" aria-label="Abrir menú" onclick="this.classList.toggle('open'); document.querySelector('.nav-menu').classList.toggle('open')">
+    <img class="icono-menu" src="img/menu.png" alt="Abrir menú">
+    <img class="icono-cerrar" src="img/cerrar.png" alt="Cerrar menú">
+  </button>
+
+  <nav class="nav-menu">
+    <ul>
+      <li><a href="index.html">Inicio</a></li>
+      <li><a href="equipos.html">Equipos</a></li>
+      <li><a href="clasificacion.html">Clasificación</a></li>
+      <li><a href="resultados.html">Resultados</a></li>
+      <li><a href="cruces.html">Fase Eliminatoria</a></li>
+    </ul>
+  </nav>
+</header>
     <h1>Benvidos á web oficial do II Torneo Alevín Hyundai S.R. Calo</h1>
     <p style="text-align: center; color: white">
       Aquí atoparás toda a información necesaria para que a túa experiencia en
