--- a/resultados.html
+++ b/resultados.html
@@ -147,16 +147,16 @@
 
       <p>
         <img src="img/icono-correo.png" alt="Correo" class="icono-contacto">
-        <a href="mailto:antonlopezleal2@gmail.com">antonlopezleal2@gmail.com</a>
-        |
+        <a href="mailto:antonlopezleal2@gmail.com">antonlopezleal2@gmail.com</a></p>
+        <p>
         <img src="img/icono-telefono.png" alt="Teléfono" class="icono-contacto">
         <a href="tel:+34658458813">+34 658 458 813</a>
       </p>
 
       <p>
         <img src="img/icono-correo.png" alt="Correo" class="icono-contacto">
-        <a href="mailto:vilari.ser@gmail.com">vilari.ser@gmail.com</a>
-        |
+        <a href="mailto:vilari.ser@gmail.com">vilari.ser@gmail.com</a></p>
+        <p>
         <img src="img/icono-telefono.png" alt="Teléfono" class="icono-contacto">
         <a href="tel:+34654075563">+34 654 075 563</a>
       </p>
