--- a/index.html
+++ b/index.html
@@ -351,10 +351,14 @@
           <span class="arrow">▼</span>
         </h2>
         <div class="card-content">
-          <p>Deixa a túa opinión sobre o torneo.</p>
-          <a class="btn" href="#" target="_blank"
+          <p>Deixa a túa opinión sobre a web!</p>
+          <a class="btn" href="https://forms.gle/4WSDVnaa1p78AgiL6" target="_blank"
           >Ir á enquisa</a
           >
+          <!-- <p>Deixa a túa opinión sobre o torneo.</p>
+          <a class="btn" href="#" target="_blank"
+          >Ir á enquisa</a
+          > -->
         </div>
       </section>
       <button id="btn-top" title="Volver arriba">↑</button>
@@ -364,20 +368,17 @@
   <div class="footer-container">
     <div class="autor">
       <p>Deseñado e desenvolto por Antón López Leal e Sergio Vilariño Seijo</p>
-
+      <p>Quere ter unha web para o seu torneo?</p>
+      <p>CONTÁCTA CON NÓS</p>
       <p>
         <img src="img/icono-correo.png" alt="Correo" class="icono-contacto">
-        <a href="mailto:antonlopezleal2@gmail.com">antonlopezleal2@gmail.com</a></p>
+        <a href="mailto:anton.torneos@gmail.com">anton.torneos@gmail.com</a></p>
         <p>
         <img src="img/icono-telefono.png" alt="Teléfono" class="icono-contacto">
-        <a href="tel:+34658458813">+34 658 458 813</a>
-      </p>
-
-      <p>
-        <img src="img/icono-correo.png" alt="Correo" class="icono-contacto">
-        <a href="mailto:vilari.ser@gmail.com">vilari.ser@gmail.com</a></p>
-        <p>
+        Antón:
+        <a href="tel:+34658458813">+34 658 458 813</a><br>
         <img src="img/icono-telefono.png" alt="Teléfono" class="icono-contacto">
+        Sergio:
         <a href="tel:+34654075563">+34 654 075 563</a>
       </p>
     </div>
