--- a/equipos.html
+++ b/equipos.html
@@ -133,7 +133,7 @@
               </div>
               <div class="card-back">
                 <h3>S.D. Villestro</h3>
-                <p>Gañador da fase previa da pasada edición e un mítico do fuútbol en Santiago de Compostela, o seu primeiro equipo milita actualmente na 2ª Futgal Santiago. </p>
+                <p>Gañador da fase previa da pasada edición e un mítico do fútbol en Santiago de Compostela, o seu primeiro equipo milita actualmente na 2ª Futgal Santiago. </p>
                 <a href="resultados-equipos.html?equipo=S.D. Villestro">Ver resultados</a>
                 <br/>
                 <a href="https://www.sdvillestro.com/" target="_blank" rel="noopener noreferrer">Más información</a>
