--- a/equipos.html
+++ b/equipos.html
@@ -46,7 +46,7 @@
                   </p>
                   <a href="resultados-equipos.html?equipo=C.D. Lugo">Ver resultados</a>
                   <br/>       
-                  <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                  <a href="https://cdlugo.com/" target="_blank" rel="noopener noreferrer">Máis información</a>
                 </div>
               </div>
             </div>
@@ -60,7 +60,7 @@
                 <p>Equipo anfitrión do torneo, gañador de tres Copas do Sar e actualmente asentado na 1ª Galicia. Leva sendo o referente no fútbol en Teo dende o 1961 baixo o lema "Máis que fútbol".</p>
                 <a href="resultados-equipos.html?equipo=S.R. Calo">Ver resultados</a>
                 <br/>
-                <a href="" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="" target="_blank" rel="noopener noreferrer">Máis información</a>
               </div>
             </div>
           </div>
@@ -74,7 +74,7 @@
                 <p>Club portugués con máis de 90 anos de historia, recoñecido polo seu ascenso meteórico á Primeira Liga nos últimos anos.</p>
                 <a href="resultados-equipos.html?equipo=F.C. Famalicão">Ver resultados</a>
                 <br/> 
-                <a href="https://www.fcfamalicao.pt/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="https://www.fcfamalicao.pt/" target="_blank" rel="noopener noreferrer">Máis información</a>
               </div>
             </div>
           </div>
@@ -88,7 +88,7 @@
                 <p>Histórico da cidade da Coruña, cun traballo exemplar na canteira e décadas de compromiso co fútbol base galego.</p>
                 <a href="resultados-equipos.html?equipo=Ural C.F.">Ver resultados</a>
                 <br/>
-                <a href="http://www.uralcf.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="http://www.uralcf.com/" target="_blank" rel="noopener noreferrer">Máis información</a>
               </div>
             </div>
           </div>
@@ -102,7 +102,7 @@
                 <p>Referente do fútbol formativo en Vigo, cuna de moitos talentos que chegaron ao fútbol profesional.</p>
                 <a href="resultados-equipos.html?equipo=Santa Mariña">Ver resultados</a>
                 <br/>
-                <a href="https://www.udsantamarina.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="https://www.udsantamarina.com/" target="_blank" rel="noopener noreferrer">Máis información</a>
               </div>
             </div>
           </div>
@@ -116,7 +116,7 @@
                 <p>Emblema do fútbol base ourensán, con numerosas participacións en División de Honra xuvenil e recoñecido polo seu traballo en formación.</p>
                 <a href="resultados-equipos.html?equipo=Pabellón Ourense">Ver resultados</a>
                 <br/>
-                <a href="https://www.pabelloncf.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="https://www.pabelloncf.com/" target="_blank" rel="noopener noreferrer">Máis información</a>
               </div>
             </div>
           </div>
@@ -136,7 +136,7 @@
                 <p>Gañador da fase previa da pasada edición e un mítico do fútbol en Santiago de Compostela, o seu primeiro equipo milita actualmente na 2ª Futgal Santiago. </p>
                 <a href="resultados-equipos.html?equipo=S.D. Villestro">Ver resultados</a>
                 <br/>
-                <a href="https://www.sdvillestro.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="https://www.sdvillestro.com/" target="_blank" rel="noopener noreferrer">Máis información</a>
               </div>
             </div>
           </div>
@@ -150,7 +150,7 @@
                 <p>Escola de referencia en Nigrán, con ampla experiencia en competicións nacionais e un forte compromiso coa formación deportiva e persoal.</p>
                 <a href="resultados-equipos.html?equipo=Val Miñor">Ver resultados</a>
                 <br/>
-                <a href="https://www.edvmnigran.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="https://www.edvmnigran.com/" target="_blank" rel="noopener noreferrer">Máis información</a>
               </div>
             </div>
           </div>
@@ -164,7 +164,7 @@
                 <p>Delegación oficial do histórico Sporting CP, comprometida coa formación de talentos baixo a filosofía dun dos clubs máis laureados de Portugal.</p>
                 <a href="resultados-equipos.html?equipo=Sp. Portugal">Ver resultados</a>
                 <br/>
-                <a href="https://www.sporting.pt/en/tags/academy" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="https://www.sporting.pt/en/tags/academy" target="_blank" rel="noopener noreferrer">Máis información</a>
               </div>
             </div>
           </div>
@@ -178,7 +178,7 @@
                 <p>Un dos clubs máis antigos da Coruña, con gran tradición no fútbol afeccionado e base da cidade herculina.</p>
                 <a href="resultados-equipos.html?equipo=Victoria C.F.">Ver resultados</a>
                 <br/>
-                <a href="http://victoriacf.com/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="http://victoriacf.com/" target="_blank" rel="noopener noreferrer">Máis información</a>
               </div>
             </div>
           </div>
@@ -192,7 +192,7 @@
                 <p>Equipo histórico de Trás-os-Montes en Portugal, con varias tempadas en Primeira e unha afección apaixonada.</p>
                 <a href="resultados-equipos.html?equipo=G.D. Chaves">Ver resultados</a>
                 <br/>
-                <a href="https://gdchaves.pt/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="https://gdchaves.pt/" target="_blank" rel="noopener noreferrer">Máis información</a>
               </div>
             </div>
           </div>
@@ -206,7 +206,7 @@
                 <p>Club da provincia da Coruña cunha traxectoria notable no fútbol galego e momentos destacados na antiga 2ªB.</p>
                 <a href="resultados-equipos.html?equipo=Atl. Arteixo">Ver resultados</a>
                 <br/>
-                <a href="https://atleticoarteixo.es/" target="_blank" rel="noopener noreferrer">Más información</a>
+                <a href="https://atleticoarteixo.es/" target="_blank" rel="noopener noreferrer">Máis información</a>
               </div>
             </div>
           </div>
