Cambio en texto del index

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
     <h1>Benvidos á web oficial do II Torneo Alevín Hyundai S.R. Calo</h1>
     <p style="text-align: center; color: white">
-      Aquí atoparás toda a información necesaria para que a túa experiencia en
+      Despregando as tarxetas atoparás toda a información necesaria para que a túa experiencia en
       Rebordelo sexa máis sinxela.
     </p>
 
