--- a/equipos.html
+++ b/equipos.html
@@ -157,14 +157,14 @@
           <div class="card">
             <div class="card-inner">
               <div class="card-front">
-                <img src="img/equipos/spacademy.jpg" alt="Sporting Portugal Academy" />
+                <img src="img/equipos/calob.png" alt="S.R. Calo B" />
               </div>
               <div class="card-back">
-                <h3>Sporting Portugal Academy</h3>
-                <p>Delegación oficial do histórico Sporting CP, comprometida coa formación de talentos baixo a filosofía dun dos clubs máis laureados de Portugal.</p>
-                <a href="resultados-equipos.html?equipo=Sp. Portugal">Ver resultados</a>
+                <h3>S.R. Calo "B"</h3>
+                <p>Segundo equipo anfitríon do torneo, con ganas e ambición seguro que farán un gran papel no torneo.</p>
+                <a href="resultados-equipos.html?equipo=S.R. Calo B">Ver resultados</a>
                 <br/>
-                <a href="https://www.sporting.pt/en/tags/academy" target="_blank" rel="noopener noreferrer">Máis información</a>
+                <a href="index.html" target="_blank" rel="noopener noreferrer">Máis información</a>
               </div>
             </div>
           </div>
