--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                   <td rowspan="2">13:45 - 14:30</td>
                 </tr>
                 <tr>
-                  <td>S.P. Portugal Academy</td>
+                  <td>S.R. Calo "B"</td>
                 </tr>
                 <tr>
                   <td>E.D.Val Miñor</td>
